envs/local/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mson-ingress-controller
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /grafana/(.*)
            pathType: Prefix
            backend:
              service:
                name: grafana-service
                port:
                  number: 80
          - path: /embed-app/(.*)
            pathType: Prefix
            backend:
              service:
                name: embed-app-service
                port:
                  number: 80
